// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemeParse (s-expression) 1`] = `
{
  "body": [
    {
      "loc": Location {
        "end": Position {
          "column": 27,
          "line": 2,
        },
        "start": Position {
          "column": 3,
          "line": 2,
        },
      },
      "source": {
        "loc": Location {
          "end": Position {
            "column": 19,
            "line": 2,
          },
          "start": Position {
            "column": 15,
            "line": 2,
          },
        },
        "raw": ""std"",
        "type": "Literal",
        "value": "std",
      },
      "specifiers": [
        {
          "imported": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "list",
            "type": "Identifier",
          },
          "loc": Location {
            "end": Position {
              "column": 24,
              "line": 2,
            },
            "start": Position {
              "column": 21,
              "line": 2,
            },
          },
          "local": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "importedlist",
            "type": "Identifier",
          },
          "type": "ImportSpecifier",
        },
        {
          "imported": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "map",
            "type": "Identifier",
          },
          "loc": Location {
            "end": Position {
              "column": 27,
              "line": 2,
            },
            "start": Position {
              "column": 25,
              "line": 2,
            },
          },
          "local": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "importedmap",
            "type": "Identifier",
          },
          "type": "ImportSpecifier",
        },
      ],
      "type": "ImportDeclaration",
    },
    {
      "declarations": [
        {
          "id": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "list",
            "type": "Identifier",
          },
          "init": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "importedlist",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": Location {
        "end": Position {
          "column": 24,
          "line": 2,
        },
        "start": Position {
          "column": 21,
          "line": 2,
        },
      },
      "type": "VariableDeclaration",
    },
    {
      "declarations": [
        {
          "id": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "map",
            "type": "Identifier",
          },
          "init": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "importedmap",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": Location {
        "end": Position {
          "column": 27,
          "line": 2,
        },
        "start": Position {
          "column": 25,
          "line": 2,
        },
      },
      "type": "VariableDeclaration",
    },
    {
      "expression": {
        "arguments": [
          {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 14,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 9,
                    "line": 3,
                  },
                },
                "raw": ""define"",
                "type": "Literal",
                "value": "define",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 14,
                  "line": 3,
                },
                "start": Position {
                  "column": 9,
                  "line": 3,
                },
              },
              "name": "string->symbol",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 14,
                "line": 3,
              },
              "start": Position {
                "column": 9,
                "line": 3,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 22,
                        "line": 3,
                      },
                      "start": Position {
                        "column": 17,
                        "line": 3,
                      },
                    },
                    "raw": ""square"",
                    "type": "Literal",
                    "value": "square",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 22,
                      "line": 3,
                    },
                    "start": Position {
                      "column": 17,
                      "line": 3,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 22,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 17,
                    "line": 3,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 19,
                        "line": 3,
                      },
                      "start": Position {
                        "column": 19,
                        "line": 3,
                      },
                    },
                    "raw": ""x"",
                    "type": "Literal",
                    "value": "x",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Position {
                      "column": 19,
                      "line": 3,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 19,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 19,
                    "line": 3,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 20,
                  "line": 3,
                },
                "start": Position {
                  "column": 11,
                  "line": 3,
                },
              },
              "name": "list",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 20,
                "line": 3,
              },
              "start": Position {
                "column": 11,
                "line": 3,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 23,
                        "line": 3,
                      },
                      "start": Position {
                        "column": 23,
                        "line": 3,
                      },
                    },
                    "raw": ""*"",
                    "type": "Literal",
                    "value": "*",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 23,
                      "line": 3,
                    },
                    "start": Position {
                      "column": 23,
                      "line": 3,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 23,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 23,
                    "line": 3,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 25,
                        "line": 3,
                      },
                      "start": Position {
                        "column": 25,
                        "line": 3,
                      },
                    },
                    "raw": ""x"",
                    "type": "Literal",
                    "value": "x",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 25,
                      "line": 3,
                    },
                    "start": Position {
                      "column": 25,
                      "line": 3,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 25,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 25,
                    "line": 3,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 27,
                        "line": 3,
                      },
                      "start": Position {
                        "column": 27,
                        "line": 3,
                      },
                    },
                    "raw": ""x"",
                    "type": "Literal",
                    "value": "x",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 27,
                      "line": 3,
                    },
                    "start": Position {
                      "column": 27,
                      "line": 3,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 27,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 27,
                    "line": 3,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 28,
                  "line": 3,
                },
                "start": Position {
                  "column": 22,
                  "line": 3,
                },
              },
              "name": "list",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 28,
                "line": 3,
              },
              "start": Position {
                "column": 22,
                "line": 3,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
        ],
        "callee": {
          "loc": Location {
            "end": Position {
              "column": 29,
              "line": 3,
            },
            "start": Position {
              "column": 3,
              "line": 3,
            },
          },
          "name": "list",
          "type": "Identifier",
        },
        "loc": Location {
          "end": Position {
            "column": 29,
            "line": 3,
          },
          "start": Position {
            "column": 3,
            "line": 3,
          },
        },
        "optional": false,
        "type": "CallExpression",
      },
      "loc": Location {
        "end": Position {
          "column": 29,
          "line": 3,
        },
        "start": Position {
          "column": 3,
          "line": 3,
        },
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "arguments": [
          {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 14,
                    "line": 4,
                  },
                  "start": Position {
                    "column": 9,
                    "line": 4,
                  },
                },
                "raw": ""square"",
                "type": "Literal",
                "value": "square",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 14,
                  "line": 4,
                },
                "start": Position {
                  "column": 9,
                  "line": 4,
                },
              },
              "name": "string->symbol",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 14,
                "line": 4,
              },
              "start": Position {
                "column": 9,
                "line": 4,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 15,
                    "line": 4,
                  },
                  "start": Position {
                    "column": 13,
                    "line": 4,
                  },
                },
                "raw": ""5/8"",
                "type": "Literal",
                "value": "5/8",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 15,
                  "line": 4,
                },
                "start": Position {
                  "column": 13,
                  "line": 4,
                },
              },
              "name": "make_number",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 15,
                "line": 4,
              },
              "start": Position {
                "column": 13,
                "line": 4,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
        ],
        "callee": {
          "loc": Location {
            "end": Position {
              "column": 14,
              "line": 4,
            },
            "start": Position {
              "column": 3,
              "line": 4,
            },
          },
          "name": "list",
          "type": "Identifier",
        },
        "loc": Location {
          "end": Position {
            "column": 14,
            "line": 4,
          },
          "start": Position {
            "column": 3,
            "line": 4,
          },
        },
        "optional": false,
        "type": "CallExpression",
      },
      "loc": Location {
        "end": Position {
          "column": 14,
          "line": 4,
        },
        "start": Position {
          "column": 3,
          "line": 4,
        },
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "arguments": [
          {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 12,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 8,
                    "line": 5,
                  },
                },
                "raw": ""begin"",
                "type": "Literal",
                "value": "begin",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 12,
                  "line": 5,
                },
                "start": Position {
                  "column": 8,
                  "line": 5,
                },
              },
              "name": "string->symbol",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 12,
                "line": 5,
              },
              "start": Position {
                "column": 8,
                "line": 5,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 21,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 16,
                        "line": 5,
                      },
                    },
                    "raw": ""define"",
                    "type": "Literal",
                    "value": "define",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 21,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 16,
                      "line": 5,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 21,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 16,
                    "line": 5,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 18,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 18,
                        "line": 5,
                      },
                    },
                    "raw": ""x"",
                    "type": "Literal",
                    "value": "x",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 18,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 18,
                      "line": 5,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 18,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 18,
                    "line": 5,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 20,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 20,
                        "line": 5,
                      },
                    },
                    "raw": ""5"",
                    "type": "Literal",
                    "value": "5",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 20,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 20,
                      "line": 5,
                    },
                  },
                  "name": "make_number",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 20,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 20,
                    "line": 5,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 21,
                  "line": 5,
                },
                "start": Position {
                  "column": 10,
                  "line": 5,
                },
              },
              "name": "list",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 21,
                "line": 5,
              },
              "start": Position {
                "column": 10,
                "line": 5,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 30,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 27,
                        "line": 5,
                      },
                    },
                    "raw": ""set!"",
                    "type": "Literal",
                    "value": "set!",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 30,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 27,
                      "line": 5,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 30,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 27,
                    "line": 5,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 29,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 29,
                        "line": 5,
                      },
                    },
                    "raw": ""x"",
                    "type": "Literal",
                    "value": "x",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 29,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 29,
                      "line": 5,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 29,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 29,
                    "line": 5,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 33,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 32,
                        "line": 5,
                      },
                    },
                    "raw": ""10"",
                    "type": "Literal",
                    "value": "10",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 33,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 32,
                      "line": 5,
                    },
                  },
                  "name": "make_number",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 33,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 32,
                    "line": 5,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 33,
                  "line": 5,
                },
                "start": Position {
                  "column": 23,
                  "line": 5,
                },
              },
              "name": "list",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 33,
                "line": 5,
              },
              "start": Position {
                "column": 23,
                "line": 5,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 35,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 35,
                    "line": 5,
                  },
                },
                "raw": ""x"",
                "type": "Literal",
                "value": "x",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 35,
                  "line": 5,
                },
                "start": Position {
                  "column": 35,
                  "line": 5,
                },
              },
              "name": "string->symbol",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 35,
                "line": 5,
              },
              "start": Position {
                "column": 35,
                "line": 5,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
        ],
        "callee": {
          "loc": Location {
            "end": Position {
              "column": 36,
              "line": 5,
            },
            "start": Position {
              "column": 3,
              "line": 5,
            },
          },
          "name": "list",
          "type": "Identifier",
        },
        "loc": Location {
          "end": Position {
            "column": 36,
            "line": 5,
          },
          "start": Position {
            "column": 3,
            "line": 5,
          },
        },
        "optional": false,
        "type": "CallExpression",
      },
      "loc": Location {
        "end": Position {
          "column": 36,
          "line": 5,
        },
        "start": Position {
          "column": 3,
          "line": 5,
        },
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "arguments": [
          {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 14,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 9,
                    "line": 6,
                  },
                },
                "raw": ""define"",
                "type": "Literal",
                "value": "define",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 14,
                  "line": 6,
                },
                "start": Position {
                  "column": 9,
                  "line": 6,
                },
              },
              "name": "string->symbol",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 14,
                "line": 6,
              },
              "start": Position {
                "column": 9,
                "line": 6,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 22,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 17,
                        "line": 6,
                      },
                    },
                    "raw": ""square"",
                    "type": "Literal",
                    "value": "square",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 22,
                      "line": 6,
                    },
                    "start": Position {
                      "column": 17,
                      "line": 6,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 22,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 17,
                    "line": 6,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 19,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 19,
                        "line": 6,
                      },
                    },
                    "raw": ""x"",
                    "type": "Literal",
                    "value": "x",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 19,
                      "line": 6,
                    },
                    "start": Position {
                      "column": 19,
                      "line": 6,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 19,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 19,
                    "line": 6,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 20,
                  "line": 6,
                },
                "start": Position {
                  "column": 11,
                  "line": 6,
                },
              },
              "name": "list",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 20,
                "line": 6,
              },
              "start": Position {
                "column": 11,
                "line": 6,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          {
            "arguments": [
              {
                "arguments": [
                  {
                    "loc": Location {
                      "end": Position {
                        "column": 31,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 27,
                        "line": 6,
                      },
                    },
                    "raw": ""begin"",
                    "type": "Literal",
                    "value": "begin",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 31,
                      "line": 6,
                    },
                    "start": Position {
                      "column": 27,
                      "line": 6,
                    },
                  },
                  "name": "string->symbol",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 31,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 27,
                    "line": 6,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "arguments": [
                      {
                        "loc": Location {
                          "end": Position {
                            "column": 40,
                            "line": 6,
                          },
                          "start": Position {
                            "column": 35,
                            "line": 6,
                          },
                        },
                        "raw": ""define"",
                        "type": "Literal",
                        "value": "define",
                      },
                    ],
                    "callee": {
                      "loc": Location {
                        "end": Position {
                          "column": 40,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 35,
                          "line": 6,
                        },
                      },
                      "name": "string->symbol",
                      "type": "Identifier",
                    },
                    "loc": Location {
                      "end": Position {
                        "column": 40,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 35,
                        "line": 6,
                      },
                    },
                    "optional": false,
                    "type": "CallExpression",
                  },
                  {
                    "arguments": [
                      {
                        "loc": Location {
                          "end": Position {
                            "column": 37,
                            "line": 6,
                          },
                          "start": Position {
                            "column": 37,
                            "line": 6,
                          },
                        },
                        "raw": ""x"",
                        "type": "Literal",
                        "value": "x",
                      },
                    ],
                    "callee": {
                      "loc": Location {
                        "end": Position {
                          "column": 37,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 37,
                          "line": 6,
                        },
                      },
                      "name": "string->symbol",
                      "type": "Identifier",
                    },
                    "loc": Location {
                      "end": Position {
                        "column": 37,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 37,
                        "line": 6,
                      },
                    },
                    "optional": false,
                    "type": "CallExpression",
                  },
                  {
                    "arguments": [
                      {
                        "loc": Location {
                          "end": Position {
                            "column": 39,
                            "line": 6,
                          },
                          "start": Position {
                            "column": 39,
                            "line": 6,
                          },
                        },
                        "raw": ""5"",
                        "type": "Literal",
                        "value": "5",
                      },
                    ],
                    "callee": {
                      "loc": Location {
                        "end": Position {
                          "column": 39,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 39,
                          "line": 6,
                        },
                      },
                      "name": "make_number",
                      "type": "Identifier",
                    },
                    "loc": Location {
                      "end": Position {
                        "column": 39,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 39,
                        "line": 6,
                      },
                    },
                    "optional": false,
                    "type": "CallExpression",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 40,
                      "line": 6,
                    },
                    "start": Position {
                      "column": 29,
                      "line": 6,
                    },
                  },
                  "name": "list",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 40,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 29,
                    "line": 6,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
              {
                "arguments": [
                  {
                    "arguments": [
                      {
                        "loc": Location {
                          "end": Position {
                            "column": 43,
                            "line": 6,
                          },
                          "start": Position {
                            "column": 43,
                            "line": 6,
                          },
                        },
                        "raw": ""*"",
                        "type": "Literal",
                        "value": "*",
                      },
                    ],
                    "callee": {
                      "loc": Location {
                        "end": Position {
                          "column": 43,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 43,
                          "line": 6,
                        },
                      },
                      "name": "string->symbol",
                      "type": "Identifier",
                    },
                    "loc": Location {
                      "end": Position {
                        "column": 43,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 43,
                        "line": 6,
                      },
                    },
                    "optional": false,
                    "type": "CallExpression",
                  },
                  {
                    "arguments": [
                      {
                        "loc": Location {
                          "end": Position {
                            "column": 45,
                            "line": 6,
                          },
                          "start": Position {
                            "column": 45,
                            "line": 6,
                          },
                        },
                        "raw": ""x"",
                        "type": "Literal",
                        "value": "x",
                      },
                    ],
                    "callee": {
                      "loc": Location {
                        "end": Position {
                          "column": 45,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 45,
                          "line": 6,
                        },
                      },
                      "name": "string->symbol",
                      "type": "Identifier",
                    },
                    "loc": Location {
                      "end": Position {
                        "column": 45,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 45,
                        "line": 6,
                      },
                    },
                    "optional": false,
                    "type": "CallExpression",
                  },
                  {
                    "arguments": [
                      {
                        "loc": Location {
                          "end": Position {
                            "column": 47,
                            "line": 6,
                          },
                          "start": Position {
                            "column": 47,
                            "line": 6,
                          },
                        },
                        "raw": ""x"",
                        "type": "Literal",
                        "value": "x",
                      },
                    ],
                    "callee": {
                      "loc": Location {
                        "end": Position {
                          "column": 47,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 47,
                          "line": 6,
                        },
                      },
                      "name": "string->symbol",
                      "type": "Identifier",
                    },
                    "loc": Location {
                      "end": Position {
                        "column": 47,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 47,
                        "line": 6,
                      },
                    },
                    "optional": false,
                    "type": "CallExpression",
                  },
                ],
                "callee": {
                  "loc": Location {
                    "end": Position {
                      "column": 48,
                      "line": 6,
                    },
                    "start": Position {
                      "column": 42,
                      "line": 6,
                    },
                  },
                  "name": "list",
                  "type": "Identifier",
                },
                "loc": Location {
                  "end": Position {
                    "column": 48,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 42,
                    "line": 6,
                  },
                },
                "optional": false,
                "type": "CallExpression",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 49,
                  "line": 6,
                },
                "start": Position {
                  "column": 22,
                  "line": 6,
                },
              },
              "name": "list",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 49,
                "line": 6,
              },
              "start": Position {
                "column": 22,
                "line": 6,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
        ],
        "callee": {
          "loc": Location {
            "end": Position {
              "column": 50,
              "line": 6,
            },
            "start": Position {
              "column": 3,
              "line": 6,
            },
          },
          "name": "list",
          "type": "Identifier",
        },
        "loc": Location {
          "end": Position {
            "column": 50,
            "line": 6,
          },
          "start": Position {
            "column": 3,
            "line": 6,
          },
        },
        "optional": false,
        "type": "CallExpression",
      },
      "loc": Location {
        "end": Position {
          "column": 50,
          "line": 6,
        },
        "start": Position {
          "column": 3,
          "line": 6,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "loc": {
    "end": Position {
      "column": 50,
      "line": 6,
    },
    "start": Position {
      "column": 3,
      "line": 2,
    },
  },
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`schemeParse (standard) 1`] = `
{
  "body": [
    {
      "loc": Location {
        "end": Position {
          "column": 27,
          "line": 2,
        },
        "start": Position {
          "column": 3,
          "line": 2,
        },
      },
      "source": {
        "loc": Location {
          "end": Position {
            "column": 19,
            "line": 2,
          },
          "start": Position {
            "column": 15,
            "line": 2,
          },
        },
        "raw": ""std"",
        "type": "Literal",
        "value": "std",
      },
      "specifiers": [
        {
          "imported": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "list",
            "type": "Identifier",
          },
          "loc": Location {
            "end": Position {
              "column": 24,
              "line": 2,
            },
            "start": Position {
              "column": 21,
              "line": 2,
            },
          },
          "local": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "importedlist",
            "type": "Identifier",
          },
          "type": "ImportSpecifier",
        },
        {
          "imported": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "map",
            "type": "Identifier",
          },
          "loc": Location {
            "end": Position {
              "column": 27,
              "line": 2,
            },
            "start": Position {
              "column": 25,
              "line": 2,
            },
          },
          "local": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "importedmap",
            "type": "Identifier",
          },
          "type": "ImportSpecifier",
        },
      ],
      "type": "ImportDeclaration",
    },
    {
      "declarations": [
        {
          "id": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "list",
            "type": "Identifier",
          },
          "init": {
            "loc": Location {
              "end": Position {
                "column": 24,
                "line": 2,
              },
              "start": Position {
                "column": 21,
                "line": 2,
              },
            },
            "name": "importedlist",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": Location {
        "end": Position {
          "column": 24,
          "line": 2,
        },
        "start": Position {
          "column": 21,
          "line": 2,
        },
      },
      "type": "VariableDeclaration",
    },
    {
      "declarations": [
        {
          "id": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "map",
            "type": "Identifier",
          },
          "init": {
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 2,
              },
              "start": Position {
                "column": 25,
                "line": 2,
              },
            },
            "name": "importedmap",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": Location {
        "end": Position {
          "column": 27,
          "line": 2,
        },
        "start": Position {
          "column": 25,
          "line": 2,
        },
      },
      "type": "VariableDeclaration",
    },
    {
      "declarations": [
        {
          "id": {
            "loc": Location {
              "end": Position {
                "column": 22,
                "line": 3,
              },
              "start": Position {
                "column": 17,
                "line": 3,
              },
            },
            "name": "square",
            "type": "Identifier",
          },
          "init": {
            "async": false,
            "body": {
              "arguments": [
                {
                  "loc": Location {
                    "end": Position {
                      "column": 25,
                      "line": 3,
                    },
                    "start": Position {
                      "column": 25,
                      "line": 3,
                    },
                  },
                  "name": "x",
                  "type": "Identifier",
                },
                {
                  "loc": Location {
                    "end": Position {
                      "column": 27,
                      "line": 3,
                    },
                    "start": Position {
                      "column": 27,
                      "line": 3,
                    },
                  },
                  "name": "x",
                  "type": "Identifier",
                },
              ],
              "callee": {
                "loc": Location {
                  "end": Position {
                    "column": 23,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 23,
                    "line": 3,
                  },
                },
                "name": "*",
                "type": "Identifier",
              },
              "loc": Location {
                "end": Position {
                  "column": 28,
                  "line": 3,
                },
                "start": Position {
                  "column": 22,
                  "line": 3,
                },
              },
              "optional": false,
              "type": "CallExpression",
            },
            "expression": true,
            "loc": Location {
              "end": Position {
                "column": 29,
                "line": 3,
              },
              "start": Position {
                "column": 3,
                "line": 3,
              },
            },
            "params": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 19,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 19,
                    "line": 3,
                  },
                },
                "name": "x",
                "type": "Identifier",
              },
            ],
            "type": "ArrowFunctionExpression",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": Location {
        "end": Position {
          "column": 29,
          "line": 3,
        },
        "start": Position {
          "column": 3,
          "line": 3,
        },
      },
      "type": "VariableDeclaration",
    },
    {
      "expression": {
        "arguments": [
          {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 15,
                    "line": 4,
                  },
                  "start": Position {
                    "column": 13,
                    "line": 4,
                  },
                },
                "raw": ""5/8"",
                "type": "Literal",
                "value": "5/8",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 15,
                  "line": 4,
                },
                "start": Position {
                  "column": 13,
                  "line": 4,
                },
              },
              "name": "make_number",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 15,
                "line": 4,
              },
              "start": Position {
                "column": 13,
                "line": 4,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
        ],
        "callee": {
          "loc": Location {
            "end": Position {
              "column": 14,
              "line": 4,
            },
            "start": Position {
              "column": 9,
              "line": 4,
            },
          },
          "name": "square",
          "type": "Identifier",
        },
        "loc": Location {
          "end": Position {
            "column": 14,
            "line": 4,
          },
          "start": Position {
            "column": 3,
            "line": 4,
          },
        },
        "optional": false,
        "type": "CallExpression",
      },
      "loc": Location {
        "end": Position {
          "column": 14,
          "line": 4,
        },
        "start": Position {
          "column": 3,
          "line": 4,
        },
      },
      "type": "ExpressionStatement",
    },
    {
      "declarations": [
        {
          "id": {
            "loc": Location {
              "end": Position {
                "column": 18,
                "line": 5,
              },
              "start": Position {
                "column": 18,
                "line": 5,
              },
            },
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "arguments": [
              {
                "loc": Location {
                  "end": Position {
                    "column": 20,
                    "line": 5,
                  },
                  "start": Position {
                    "column": 20,
                    "line": 5,
                  },
                },
                "raw": ""5"",
                "type": "Literal",
                "value": "5",
              },
            ],
            "callee": {
              "loc": Location {
                "end": Position {
                  "column": 20,
                  "line": 5,
                },
                "start": Position {
                  "column": 20,
                  "line": 5,
                },
              },
              "name": "make_number",
              "type": "Identifier",
            },
            "loc": Location {
              "end": Position {
                "column": 20,
                "line": 5,
              },
              "start": Position {
                "column": 20,
                "line": 5,
              },
            },
            "optional": false,
            "type": "CallExpression",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": Location {
        "end": Position {
          "column": 21,
          "line": 5,
        },
        "start": Position {
          "column": 10,
          "line": 5,
        },
      },
      "type": "VariableDeclaration",
    },
    {
      "expression": {
        "left": {
          "loc": Location {
            "end": Position {
              "column": 29,
              "line": 5,
            },
            "start": Position {
              "column": 29,
              "line": 5,
            },
          },
          "name": "x",
          "type": "Identifier",
        },
        "loc": Location {
          "end": Position {
            "column": 33,
            "line": 5,
          },
          "start": Position {
            "column": 23,
            "line": 5,
          },
        },
        "operator": "=",
        "right": {
          "arguments": [
            {
              "loc": Location {
                "end": Position {
                  "column": 33,
                  "line": 5,
                },
                "start": Position {
                  "column": 32,
                  "line": 5,
                },
              },
              "raw": ""10"",
              "type": "Literal",
              "value": "10",
            },
          ],
          "callee": {
            "loc": Location {
              "end": Position {
                "column": 33,
                "line": 5,
              },
              "start": Position {
                "column": 32,
                "line": 5,
              },
            },
            "name": "make_number",
            "type": "Identifier",
          },
          "loc": Location {
            "end": Position {
              "column": 33,
              "line": 5,
            },
            "start": Position {
              "column": 32,
              "line": 5,
            },
          },
          "optional": false,
          "type": "CallExpression",
        },
        "type": "AssignmentExpression",
      },
      "loc": Location {
        "end": Position {
          "column": 33,
          "line": 5,
        },
        "start": Position {
          "column": 23,
          "line": 5,
        },
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "loc": Location {
          "end": Position {
            "column": 35,
            "line": 5,
          },
          "start": Position {
            "column": 35,
            "line": 5,
          },
        },
        "name": "x",
        "type": "Identifier",
      },
      "loc": Location {
        "end": Position {
          "column": 35,
          "line": 5,
        },
        "start": Position {
          "column": 35,
          "line": 5,
        },
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "left": {
          "loc": Location {
            "end": Position {
              "column": 22,
              "line": 6,
            },
            "start": Position {
              "column": 17,
              "line": 6,
            },
          },
          "name": "square",
          "type": "Identifier",
        },
        "loc": Location {
          "end": Position {
            "column": 50,
            "line": 6,
          },
          "start": Position {
            "column": 3,
            "line": 6,
          },
        },
        "operator": "=",
        "right": {
          "async": false,
          "body": {
            "body": [
              {
                "declarations": [
                  {
                    "id": {
                      "loc": Location {
                        "end": Position {
                          "column": 37,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 37,
                          "line": 6,
                        },
                      },
                      "name": "x",
                      "type": "Identifier",
                    },
                    "init": {
                      "arguments": [
                        {
                          "loc": Location {
                            "end": Position {
                              "column": 39,
                              "line": 6,
                            },
                            "start": Position {
                              "column": 39,
                              "line": 6,
                            },
                          },
                          "raw": ""5"",
                          "type": "Literal",
                          "value": "5",
                        },
                      ],
                      "callee": {
                        "loc": Location {
                          "end": Position {
                            "column": 39,
                            "line": 6,
                          },
                          "start": Position {
                            "column": 39,
                            "line": 6,
                          },
                        },
                        "name": "make_number",
                        "type": "Identifier",
                      },
                      "loc": Location {
                        "end": Position {
                          "column": 39,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 39,
                          "line": 6,
                        },
                      },
                      "optional": false,
                      "type": "CallExpression",
                    },
                    "type": "VariableDeclarator",
                  },
                ],
                "kind": "let",
                "loc": Location {
                  "end": Position {
                    "column": 40,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 29,
                    "line": 6,
                  },
                },
                "type": "VariableDeclaration",
              },
              {
                "argument": {
                  "arguments": [
                    {
                      "loc": Location {
                        "end": Position {
                          "column": 45,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 45,
                          "line": 6,
                        },
                      },
                      "name": "x",
                      "type": "Identifier",
                    },
                    {
                      "loc": Location {
                        "end": Position {
                          "column": 47,
                          "line": 6,
                        },
                        "start": Position {
                          "column": 47,
                          "line": 6,
                        },
                      },
                      "name": "x",
                      "type": "Identifier",
                    },
                  ],
                  "callee": {
                    "loc": Location {
                      "end": Position {
                        "column": 43,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 43,
                        "line": 6,
                      },
                    },
                    "name": "*",
                    "type": "Identifier",
                  },
                  "loc": Location {
                    "end": Position {
                      "column": 48,
                      "line": 6,
                    },
                    "start": Position {
                      "column": 42,
                      "line": 6,
                    },
                  },
                  "optional": false,
                  "type": "CallExpression",
                },
                "loc": Location {
                  "end": Position {
                    "column": 48,
                    "line": 6,
                  },
                  "start": Position {
                    "column": 42,
                    "line": 6,
                  },
                },
                "type": "ReturnStatement",
              },
            ],
            "loc": {
              "end": Position {
                "column": 48,
                "line": 6,
              },
              "start": Position {
                "column": 29,
                "line": 6,
              },
            },
            "type": "BlockStatement",
          },
          "expression": false,
          "loc": Location {
            "end": Position {
              "column": 50,
              "line": 6,
            },
            "start": Position {
              "column": 3,
              "line": 6,
            },
          },
          "params": [
            {
              "loc": Location {
                "end": Position {
                  "column": 19,
                  "line": 6,
                },
                "start": Position {
                  "column": 19,
                  "line": 6,
                },
              },
              "name": "x",
              "type": "Identifier",
            },
          ],
          "type": "ArrowFunctionExpression",
        },
        "type": "AssignmentExpression",
      },
      "loc": Location {
        "end": Position {
          "column": 50,
          "line": 6,
        },
        "start": Position {
          "column": 3,
          "line": 6,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "loc": {
    "end": Position {
      "column": 50,
      "line": 6,
    },
    "start": Position {
      "column": 3,
      "line": 2,
    },
  },
  "sourceType": "module",
  "type": "Program",
}
`;
